2007-06-16  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/gem_path_searcher.rb (Gem::GemPathSearcher): Moved out
	of lib/rubygems/custom_require.rb and added tests.

2007-06-02  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/source_info_cache.rb (Gem::try_file): Fix for issue
	where a non-existing source cache file causes the gem command to
	not find a gem.  This fixes it by marshalling out an empty
	hash.  (Thanks to Nick Sieger for this fix).

2007-06-01  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems.rb
	(Gem::OperationNotSupportedError::latest_partials): Changed from
	match data style to $1 style regexp (on the recommendation of
	better performance).

2007-05-30  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/source_index.rb (Gem::SourceIndex::update):
	Modified to get the bulk_threshhold from the configuration.
	(Gem::SourceIndex::convert_specs): Ryan removed the "reduce_specs"
	method because it is not needed any more and is creating memory
	overhead.

	* lib/rubygems/config_file.rb (Gem::ConfigFile): Added
	bulk_threshhold field to ConfigFile.
	(Gem::ConfigFile::initialize): Initialize bulk threshhold to 500.

	* lib/rubygems/command.rb
	(Gem::Command::specific_extra_args_hash): Added
	-B (--bulk-threshhold) option to allow user specified bulk
	download threshhold.

2007-05-23  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/commands/sources_command.rb
	(Gem::Commands::SourcesCommand::initialize): Added a --clear-all
	option to the sources subcommand.  Clear-all will remove the cache
	files.

	* lib/rubygems/source_info_cache.rb (Gem): Moved system_cache_file
	and user_cache_file to class methods so that we can get the file
	names without creating a SourceInfoCache instance.

2007-05-23  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/source_info_cache.rb: Teach SIC to repair itself
	when it encounters a bad cache file.

2007-05-14  Chad Fowler  <chad@chadfowler.com>