@@ -20,7 +20,7 @@ module Gem
     def initialize(spec, rdoc_args="")
       @spec = spec
       @doc_dir = File.join(spec.installation_path, "doc", spec.full_name)
-      Gem::FilePermissionError.new(spec.installation_path) unless File.writable?(spec.installation_path)
+      raise Gem::FilePermissionError.new(spec.installation_path) unless File.writable?(spec.installation_path)
       @rdoc_args = rdoc_args.nil? ? [] : rdoc_args.split
     end
     
